namespace IsuExtra.Entities
{
    public record Mentor(int Id, string Name);
}